== 2.3.0

* Added blank and not_blank conditions.

== 2.3.0 released 2009-08-22

* Thanks to laserlemon for support of ranges and arrays in the equals condition.
* Added feature to combine condition with 'or'.

== 2.2.3 released 2009-07-31

* Fixed bug when an associations named scope joins is a string or an array of strings, the joins we add in automatically should also be a string, not a symbol.

== 2.2.2 released 2009-07-31

* Fix bug to give priority to local columns.

== 2.2.1 released 2009-07-30

* Use ::ActiveRecord instead of ActiveRecord to avoid a name conflict since ActiveRecord is a module within Searchlogic.

== 2.2.0 released 2009-07-30

* Refactored association code to be much simpler and rely on recursion. This allows the underlying class to do most of the work. This also allows calling any named scopes through any level of associations.

== 2.1.13 released 2009-07-29

* Applied bug fix from http://github.com/skanev/searchlogic to make #order work with association ordering.
* Applied bug fix to allow for custom ordering conditions.

== 2.1.12 released 2009-07-28

* Fixed bug when dealing with scopes that return nil.

== 2.1.11 released 2009-07-28

* Reworked how alias conditions are created on the fly, uses scope(:find) instead of proxy_options to create the scope. This allows using association alias named scopes.

== 2.1.10 released 2009-07-28

* Ignore polymorphic associations when dynamically creating conditions on associations.

== 2.1.9 released 2009-07-28

* Fixed bug when cloning with no scope
* Allow the call of foreign pre-existing named scopes instead of those generated by searchlogic. Allows you to call named scopes on associations that you define yourself.

== 2.1.8 released 2009-07-15

* Added support for not_like, not_begin_with, not_end_with, and not_null

== 2.1.7 released 2009-07-14

* Add support for time zones in the Search class when type casting to Time objects.

== 2.1.6 released 2009-07-13
