@@ -1,6 +1,7 @@
 == 2.3.0
 
 * Added blank and not_blank conditions.
+* Made User.whatever_like_any("val1", "val2") consistent with User.whatever_like_any(["val1", "val2"])
 
 == 2.3.0 released 2009-08-22
 
